--- a/content/distributions.html
+++ b/content/distributions.html
@@ -104,8 +104,8 @@
 
 <figure>
 	<picture>
-		<source srcset="/static/arch-linux.png" width="800px" />
-		<img src="/static/arch-linux.png" alt="Arch linux logo" />
+		<source srcset="./static/arch-linux.png" width="800px" />
+		<img src="./static/arch-linux.png" alt="Arch linux logo" />
 	</picture>
 
 	<figcaption>
