--- a/content/index.html
+++ b/content/index.html
@@ -10,7 +10,7 @@
 </p>
 
 <figure>
-	<object data="/static/tux.svg" type="image/svg+xml" class="tux">
+	<object data="./static/tux.svg" type="image/svg+xml" class="tux">
 		Digital drawing of Tux, the Linux mascot.
 	</object>
 
