--- a/content/bits.html
+++ b/content/bits.html
@@ -81,7 +81,7 @@ Some notable definitions.
 	<h3>Pump it Up</h3>
 
 	<section>
-		<img src="./static/pump-it-up.png" alt="Picture of a pump it up screen" width="400px">
+		<img src="./static/pump-it-up.png" alt="Picture of a pump it up screen" width="400">
 
 		<footer><a href="https://andamirousa.com/product/pump-it-up-lx-20th-anniversary-xx-edition/">Image Source.</a> <small>© 2025 Andamiro USA.</small></footer>
 	</section>
@@ -92,8 +92,8 @@ Some notable definitions.
 
 	<h3>Corolla AE86</h3>
 
-	<video controls width="600px">
-		<source src="./static/ae86.mp4#t=129" type="video/mp4" />
+	<video controls width="600">
+		<source src="./static/ae86.mp4#t=129" type="video/mp4">
 	</video>
 
 	<p>Video published by THE-LOWDOWN.com on <a href="https://www.youtube.com/watch?v=riKha2kwMrg">YouTube</a>. Music called <a href="https://open.spotify.com/track/01TyFEZu6mHbffsVfxgrFn"><i>Show Me How</i></a> by Men I Trust. Used without permission.</p>
