--- a/content/bits.html
+++ b/content/bits.html
@@ -23,7 +23,7 @@
 
 <h2>kexec</h2>
 
-<p>Typically to boot into an operating system, a user must &ldquot;restart&rdquote; their computer. Linux allows a user to boot from one Linux kernel into another Linux kernel using functionality called kexec. This significantly improves the time it takes to boot because hardware initialization (performed by the BIOS) is skipped.</p>
+<p>Typically, to boot into an operating system, a user must &ldquot;restart&rdquote; their computer. Linux allows a user to boot from one Linux kernel into another Linux kernel using functionality called kexec. This significantly improves the time it takes to boot because hardware initialization (performed by the BIOS) is skipped.</p>
 
 <p>kexec performs two high-level steps:</p>
 
@@ -80,11 +80,9 @@ Some notable definitions.
 
 	<h3>Pump it Up</h3>
 
-	<section>
-		<img src="./static/pump-it-up.png" alt="Picture of a pump it up screen" width="400">
+	<img src="./static/pump-it-up.png" alt="Picture of a pump it up screen" class="pumpitup">
 
-		<footer><a href="https://andamirousa.com/product/pump-it-up-lx-20th-anniversary-xx-edition/">Image Source.</a> <small>© 2025 Andamiro USA.</small></footer>
-	</section>
+	<footer><a href="https://andamirousa.com/product/pump-it-up-lx-20th-anniversary-xx-edition/">Image Source.</a> <small>© 2025 Andamiro USA.</small></footer>
 
 	<p>Pump it up is a dancing game created by Andamiro. The game software runs on a kernel, which turn reads hardware input from the foodpads, processes it, and transmits video to a monitor. It may run Linux, it may not... who knows.</p>
 
