--- a/content/distributions.html
+++ b/content/distributions.html
@@ -115,3 +115,5 @@
 		>
 	</figcaption>
 </figure>
+
+<p>Above is the Arch Linux logo. User of Arch Linux are sometimes known to have a superiority complex. Additionally, they typically have substantially more free time compared to the typical developer. Gentoo users have similar traits, typically more exaggerated, though.</p>
