--- a/content/index.html
+++ b/content/index.html
@@ -11,7 +11,7 @@
 
 <figure>
 	<object data="./static/tux.svg" type="image/svg+xml" class="tux">
-		Digital drawing of Tux, the Linux mascot.
+		Digital drawing of Tux.
 	</object>
 
 	<figcaption>
@@ -20,6 +20,8 @@
 		>
 	</figcaption>
 </figure>
+
+<p>Above is Tux, the official mascot of Linux. Tux is a good mascot, but it looks like they have been through a lot.</p>
 
 <p>
 	There are several reasons why people may choose <a href="#linux">Linux</a> over MacOS or
@@ -77,6 +79,7 @@
 		other than AT-harddisks, as that's all I have :-(.
 	</p>
 </blockquote>
+<p>If you don't know what Usernet is, don't worry about it. Unless you do want to worry about it; in that case, check the Wikipedia page.</p>
 <p>
 	Linux was initially a hobby project developed by a single person. At first, a few
 	interested developers began contributing feature and fixing bugs. Gradually, more and
