--- a/header.html
+++ b/header.html
@@ -13,6 +13,7 @@
 		<li><a href="./">Overview</a></li>
 		<li><a href="./distributions.html">Distributions</a></li>
 		<li><a href="./storage.html">Storage Subsystem</a></li>
-		<li><a href="./bits.html">Other Bits</a></li>
+		<li><a href="./bits.html">Fun Bits</a></li>
 	</ul>
+	<hr>
 </nav>
