--- a/content/storage.html
+++ b/content/storage.html
@@ -1,4 +1,13 @@
 <h1>Linux Storage Stack</h1>
-<p>In computation, it is often useful to store data for later. Sometimes that &ldquot;later&rdquot; is in a few hundred instruction cycles. Other times, it may mean in a few months. Longer-lived data, more specifically, data that is usually stored in non-volatile storage, needs to be accessed and retrieved. Linux handles that access and retrieval through its <a href="/README.md">https://docs.kernel.org/filesystems/index.html</a></p>
+
+<p>In computation, it is often useful to store data for later. Sometimes that &ldquo;later&rdquo; is in a few hundred instruction cycles. Other times, it may mean in a few months. Longer-lived data, more specifically, data that is usually stored in non-volatile storage, needs to be accessed and retrieved. Linux handles that access and retrieval through its <a href="/README.md">https://docs.kernel.org/filesystems/index.html</a> stack.</p>
+
+<p>Before I get to Linux, it's probably good to explain what sort of bytes <i>should</i> be on a disk. Usually, the disk is separated into sections, called <em>partitions</em>. Information about partitions is usually stored in a special place on the disk. On modern disks, this information is stored in the GUID Partition Table (GPT), which is stored at both the start and the end of the disk.</p>
+
+<p>File systems are stored in partitions. File systems hold information about data; this data almost always is represented in terms of files and directories (folders). When you use your computer, the operating system conceptually represents your files as a tree. Adding and removing files adds and removes them from the tree. When you want to save your changes to disk, Linux writes these changes to the disk, using the code from your file system to do so.</p>
+
+<p>I know I didn't really explain anything well and I left a lot out, but I don't exactly have a lot of time to go into detail. If you would like to be even more confused, check out this wild diagram (I need at least one on every page):</p>
 
 <img src="https://www.thomas-krenn.com/de/wikiDE/images/e/e8/Linux-storage-stack-diagram_v6.9.png" alt="Image of the Linux storage stack">
+
+<p>You may notice the <em>device mapper</em> section of the diagram. That's a very useful abstraction. It allows exposing multiple block devices using a single backing block device. It is what allows LVM (Logical Volume Management) to actually work. I used to use LVM because it made it super easy to do online resizing of file systems, even if the file system didn't directly allow it. I kind of stopped using it because it got annoying to set it up every time.</p>
