Fix mobile and other tweaks

--- a/content/bits.html
+++ b/content/bits.html
@@ -1,4 +1,4 @@
-<h1>Miscellaneous Bits</h1>
+<h1>Fun Bits</h1>
 
 <p>I wanted to note a few interesting things that didn't exactly fit into other categories.</p>
 
@@ -23,7 +23,7 @@
 
 <h2>kexec</h2>
 
-<p>Typically, to boot into an operating system, a user must &ldquot;restart&rdquote; their computer. Linux allows a user to boot from one Linux kernel into another Linux kernel using functionality called kexec. This significantly improves the time it takes to boot because hardware initialization (performed by the BIOS) is skipped.</p>
+<p>Typically, to boot into an operating system, a user must &ldquo;restart&rdquo; their computer. Linux allows a user to boot from one Linux kernel into another Linux kernel using functionality called kexec. This significantly improves the time it takes to boot because hardware initialization (performed by the BIOS) is skipped.</p>
 
 <p>kexec performs two high-level steps:</p>
 
