--- a/content/distributions.html
+++ b/content/distributions.html
@@ -48,7 +48,7 @@
 		updators, video players, and more
 	</li>
 	<li>
-		Popular applications like Mozilla Firefox, LibreOffice,, pre-installed for convenience
+		Popular applications like Mozilla Firefox, LibreOffice, pre-installed for convenience
 	</li>
 	<li>
 		A file, known as a disk image or ISO, that is written to a USB Drive to make the
